# dino-dash

./: CMakeLists.txt  README.md
assets/: ground-1280x256.ase  player-32x32.ase  spike-16x8.ase
include/: Config.hpp  Entity.hpp  Math.hpp  Player.hpp  RenderWindow.hpp  Spike.hpp
src/: config.cpp  entity.cpp  main.cpp  math.cpp  player.cpp  renderwindow.cpp  spike.cpp
